Camlp5 Version 5.01:
---------------------

* [01 Oct 07] Fixed bug in pa_o.cmo (normal syntax) introduced in version
  5.00. The example: "function Atom atext as cur :: tl' -> 0" did not
  parse, printing the error "incorrect alias pattern".

Camlp5 Version 5.00:
---------------------

* In Camlp5 compiled distributions, there are now two modes. If one wants
  to compile Camlp5, the 'configure' script can select the mode:

  The two modes are:

  - transitional mode: the syntax tree is compatible with the previous
    version; users don't have to change their programs, but in the
    syntax tree quotations introduced by the new parsing kit
    'q_ast.cmo', the antiquotations are not available.

  - strict mode: the syntax tree is not compatible with the previous
    version. The user programs may compile without change, but may
    not.  It depends on the fact that these programs use the syntax
    tree with their constructors forms instead of their quotation
    forms. There is a new feature: the syntax tree quotations in user
    syntax, introduced by the new parsing kit 'q_ast.cmo".

* [25 Sep 07] Fixed bug: if parsing error at end of file, the error
  message printed a bad line number.
* [17 Sep 07] Added [Ploc.call_with], a pervasive function.
* [15 Sep 07] Added 'q_ast.cmo': this is the syntax tree quotations in
  the current syntax, including the possible user syntax extensions.
  The antiquotations work only in 'strict' mode, not in 'transitional'
  mode.
* [15 Sep 07] In module Pcaml, added grammar entries 'ipatt', 'match_case',
  'constructor_declaration', 'with_constr', 'poly_variant'.
* [09 Sep 07] In macros (pa_macro.cmo):
  - changed parameters syntax: now in curried form instead of parentheses,
  - added ability to define macro type expressions in signatures, e.g.:
       DEFINE V t = t -> t
  - added ability to use IFDEF and IFNDEF for constructors declarations and
    matchs cases.
* [08 Sep 07] Fixed bug in normal syntax (pa_o.cmo):