@@ -1,6 +1,8 @@
 Camlp5 Version 5.01:
 ---------------------
 
+* [01 Oct 07] Added flag E in pr_r.cmo to ask to equilibrate match cases,
+  i.e if one case does not fit on the line, all cases must be cut.
 * [01 Oct 07] Fixed bug in pa_o.cmo (normal syntax) introduced in version
   5.00. The example: "function Atom atext as cur :: tl' -> 0" did not
   parse, printing the error "incorrect alias pattern".
